--- a/src/styles/variaveis.sass
+++ b/src/styles/variaveis.sass
@@ -1,6 +1,7 @@
 // Tamanho de telas diferentes:
     // esse projeto foi projetado primeiro para telas menores de celulares (< 475px de largura) e as variáveis 
     // são para se adequar a telas maiores:
+$xxs: 300px
 $xs: 475px
 $s: 640px
 $m: 768px
