--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -7,11 +7,10 @@
 body
     height: 100vh
     box-sizing: border-box
-    background-color: #fdf5f0
     font-size: $base-font-size
    
 .header-container
-    background-color: $main-color 
+    background-color: $main-color
     overflow-x: hidden
     width: 100%
     height: 100px
@@ -173,7 +172,8 @@ body
         display: none
     .nav-container
         display: flex
-        font-size: 1.3rem
+        font-size: 1.25rem
+        margin-left: 3.5rem
     .social-icons-container
         margin-right: 4rem
         gap: 22px
@@ -189,7 +189,8 @@ body
         display: none
     .nav-container
         display: flex
-        font-size: 1.8rem
+        font-size: 1.5rem
+        margin-left: 3.5rem
     .header-container
         padding: 2rem 1rem 2rem 1rem
     .social-icons-container
