--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -15,10 +15,11 @@ main
     padding-left: 0.5rem 
     padding-right: 0.5rem
     display: grid
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
+    grid-template-columns: repeat(1, minmax(250px, 1fr))
     justify-content: center
     overflow: hidden
     box-sizing: border-box
+    gap: 1rem
 
 .titulo-container
     min-width: 0
@@ -79,7 +80,26 @@ main
     margin-left: 0.5rem
     text-shadow: -8px 0 4px rgba(0, 0, 0, 0.5)
 
-    
+.cards-container
+    background-color: white
+    display: grid
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
+    align-items: center
+    justify-items: center
+    row-gap: 1rem
+
+.projects-title 
+    display: flex
+    justify-content: center
+    align-items: center
+    font-family: 'Manrope', sans-serif
+    font-size: 3rem
+    margin: 0.8rem
+
+.about-container
+    display: grid
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
+
 @keyframes typing
     from   
         width: 0
@@ -100,10 +120,6 @@ main
     .titulo-container
         margin-left: 1.4rem
 
-    .icon-container
-        width: fit-content
-        margin-left: 2.5rem
-
     .titulo
         margin-left: 2px
         font-size: 1rem
@@ -120,12 +136,22 @@ main
 @media screen and (min-width: $s)
     main
         max-width: $s
+
+    .projects-title 
+        justify-content: start
+        align-items: start
+        margin: 40px 0 0 80px
+
+    .about-container
+        grid-template-columns: repeat(2, minmax(250px, 1fr))
+
     .titulo-container
         margin-left: 1.3rem
+
     .titulo
         margin-left: 2px
         font-size: 1rem
-
+        
     .titulo2
         font-size: 2rem
 
@@ -136,15 +162,24 @@ main
         font-size: 0.8rem
 
     .icon-container
-        font-size: 5rem
+        font-size: 5.5rem
         width: auto
         margin-left: 0
         
 @media screen and (min-width: $m)
     main
         max-width: 800px
+    
+    .about-container
+        grid-template-columns: repeat(2, minmax(250px, 1fr))
+
     .titulo-container
         margin-left: 2rem
+
+    .projects-title 
+        justify-content: start
+        align-items: start
+        margin: 40px 0 0 60px
 
     .titulo
         margin-left: 2px
@@ -160,7 +195,7 @@ main
         font-size: 1rem
 
     .icon-container
-        font-size: 5rem
+        font-size: 6rem
         width: auto
         margin-left: 0
 
@@ -168,8 +203,16 @@ main
     main
         max-width: 1200px
 
+    .about-container
+        grid-template-columns: repeat(2, minmax(250px, 1fr))
+
     .titulo-container
         margin-left: 4rem
+    
+    .projects-title 
+        justify-content: start
+        align-items: start
+        margin: 40px 0 0 70px
 
     .titulo
         margin-left: 2px
@@ -185,7 +228,7 @@ main
         font-size: 1rem
 
     .icon-container
-        font-size: 6rem
+        font-size: 7rem
         width: auto
         margin-left: 0
 
@@ -194,8 +237,16 @@ main
     main
         max-width: $xl
 
+    .about-container
+        grid-template-columns: repeat(2, minmax(250px, 1fr))
+
     .titulo-container
         margin-left: 4rem
+
+    .projects-title 
+        justify-content: start
+        align-items: start
+        margin: 40px 0 0 85px
 
     .titulo
         margin-left: 2px
@@ -211,7 +262,7 @@ main
         font-size: 1.2rem
 
     .icon-container
-        font-size: 7rem
+        font-size: 8rem
         width: auto
         margin-left: 0
 
@@ -220,8 +271,16 @@ main
     main
         max-width: 1600px
 
+    .about-container
+        grid-template-columns: repeat(2, minmax(250px, 1fr))
+
     .titulo-container
         margin-left: 4rem
+    
+    .projects-title 
+        justify-content: start
+        align-items: start
+        margin: 40px 0 0 90px
 
     .titulo
         margin-left: 2px
@@ -245,8 +304,16 @@ main
     main
         max-width: 2560px
 
+    .about-container
+        grid-template-columns: repeat(2, minmax(250px, 1fr))
+
     .titulo-container
         margin-left: 6rem
+    
+    .projects-title 
+        justify-content: start
+        align-items: start
+        margin: 40px 0 0 90px
 
     .titulo
         margin-left: 2px
