--- a/src/styles/variaveis.sass
+++ b/src/styles/variaveis.sass
@@ -10,4 +10,4 @@ $xl: 1280px
 $xxl: 1536px
 $xxxl: 1920px
 $base-font-size: 16px
-$main-color: #fdf5f0
+$main-color: linear-gradient(180deg, #a6d7f4, #8bbbd7, #aab6eb)
