--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -8,9 +8,10 @@ body
     height: 100vh
     box-sizing: border-box
     font-size: $base-font-size
-   
+
 .header-container
-    background-color: $main-color
+    font-family: 'Helvetica Neue', sans-serif
+    background-color: transparent
     overflow-x: hidden
     width: 100%
     height: 100px
@@ -31,10 +32,11 @@ body
         margin-right: auto // empurra div para o final (à esquerda) do meu container
         cursor: pointer
         .barra
+            background-color: #253b46
+            color: #253b46
             margin: 2px auto
             height: 4px
             width: 100%
-            background-color: black
             border-radius: 5px
 
 .nav-container
@@ -43,6 +45,8 @@ body
     display: none
 
 .nav-container a
+    color: #253b46
+    text-shadow: 1px 3px 8px rgba(0,0,0,0.1)
     font-family: 'Manrope', sans-serif
     margin: 0px 15px 0px 15px
 
@@ -51,7 +55,6 @@ body
         text-decoration: underline
 
 .social-icons-container
-    background-color: $main-color
     display: flex
     margin-left: auto // empurra div para o final (à direita) do meu container
     margin-right: 1.5rem
@@ -59,7 +62,7 @@ body
     gap: 18px
     button
         transition: transform 0.3s ease
-        background-color: $main-color
+        background: transparent
         border: none
         outline: none
 
@@ -68,6 +71,7 @@ body
     display: flex
     justify-content: center
     align-items: center
+    color: #253b46
     &:hover
         cursor: pointer
         transform: scale(1.15)
@@ -76,11 +80,13 @@ body
     display: flex
     justify-content: center
     align-items: center
+    color: #253b46
     &:hover
         cursor: pointer
         transform: scale(1.15)
 .linkedin-button
     font-size: 1.8rem
+    color: #253b46
     &:hover
         cursor: pointer
         transform: scale(1.15)
