--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -19,7 +19,6 @@ main
     display: grid
     grid-template-columns: repeat(1, minmax(250px, 1fr))
     justify-content: center
-    overflow: hidden
     box-sizing: border-box
     gap: 1rem
 
@@ -61,7 +60,7 @@ main
 
 .descricao2
     color: #253b46
-    font-size: 0.5rem
+    font-size: 0.7rem
     font-family: 'Manrope', sans-serif
     font-weight: 200
     white-space: nowrap
@@ -93,7 +92,6 @@ main
 
 .cards-container
     background-color: transparent
-    backdrop-filter: blur(10px)
     display: grid
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
     align-items: center
@@ -107,7 +105,7 @@ main
     font-family: 'Libre Bodoni', sans-serif
     font-size: 3rem
     margin: 0.8rem
-    color: #3f4562
+    color: #2b434e
 
 .about-container
     display: grid
