--- a/src/styles/Card.sass
+++ b/src/styles/Card.sass
@@ -2,7 +2,7 @@
 .card
     font-family: 'Manrope', sans-serif
     width: 260px
-    height: fit-content
+    height: 400px
     background: #2b434e
     border-radius: 15px
     box-shadow: 1px 5px 60px 0px rgba(0, 0, 0, 0.3)
@@ -32,6 +32,7 @@
 
 
 .content .job 
+    margin: 0  1rem 0 1rem
     font-weight: 400
     color: #e0f3fd
     display: block
