--- a/src/styles/Card.sass
+++ b/src/styles/Card.sass
@@ -56,10 +56,10 @@
   object-fit: cover // Mantém a proporção da imagem e a corta para cobrir a div
 
 .content button 
-    padding: 8px 25px
+    padding: 8px 15px
     display: block
     margin: auto
-    border-radius: 8px
+    border-radius: 10px
     border: none
     margin-top: 0.8rem
     margin-bottom: 0.8rem
@@ -71,3 +71,12 @@
 .content button:hover 
     cursor: pointer
     transform: scale(1.1)
+
+.buttons
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: row
+    gap: 0.5rem
+button
+    font-family: 'Ubuntu Mono', monospace
