--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -7,6 +7,7 @@
     background: $main-color
     /*animation: gradient 4s infinite alternate*/
     background-size: 400%
+    overflow: hidden
 
 body
     font-size: $base-font-size
