--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -30,11 +30,14 @@ main
 //        background-position: left
 
 .titulo-container
+    align-items: center
+    justify-content: center
+    display: flex
+    flex-direction: column
     min-width: 0
     white-space: nowrap
-    margin-left: 1rem
+    margin-left: 0.8rem
     margin-top: 2.5rem
-    flex-direction: column
     font-family: 'Libre Bodoni', sans-serif
 
 .titulo
@@ -43,6 +46,7 @@ main
     font-size: 1.2rem
     font-weight: 800
     margin-left: 2px
+    text-align: center
 
 .titulo2
     color: #253b46
@@ -51,6 +55,7 @@ main
     font-size: 2.5rem
     animation: typing 5s
     margin-bottom: 12px
+    text-align: center
 
 .descricao
     color: #253b46
@@ -58,13 +63,16 @@ main
     font-style: italic
     font-weight: 800
     font-family: 'Manrope', sans-serif
+    text-align: center
 
 .descricao2
     color: #253b46
     font-size: 0.7rem
     font-family: 'Manrope', sans-serif
     font-weight: 200
-    white-space: nowrap
+    text-align: center
+    white-space: wrap
+    letter-spacing: 0.2px
 
 .icon-container
     font-family: 'DM Serif Display', sans-serif
@@ -109,8 +117,10 @@ main
     color: #2b434e
 
 .about-container
+    height: 100vh
     display: grid
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
+    align-items: center
 
 @keyframes typing
     from   
@@ -118,12 +128,31 @@ main
     to 
         width: fit-content
 
-@media screen and (max-width: $xxs)
+@media screen and (max-width: 300px)
     main
         max-width: $xxs
-    .descricao,
+    .titulo2
+        font-size: 2.2rem
+
+    .descricao
+        white-space: nowrap
+        font-size: 0.9rem
+
     .descricao2
-        white-space: normal
+        max-width: $xxs
+
+@media screen and (min-width: 400px)
+    .titulo
+        font-size: 1.5rem
+
+    .titulo2
+        font-size: 2.8rem
+
+    .descricao
+        font-size: 1.2rem
+
+    .descricao2
+        font-size: 1rem
 
 @media screen and (min-width: $xs)
     main
@@ -134,13 +163,13 @@ main
 
     .titulo
         margin-left: 2px
-        font-size: 1.2rem
+        font-size: 1.5rem
 
     .titulo2
-        font-size: 2.5rem
+        font-size: 2.8rem
 
     .descricao
-        font-size: 1rem
+        font-size: 1.2rem
 
     .descricao2
         font-size: 1rem
@@ -272,6 +301,7 @@ main
 
     .descricao2
         font-size: 1.1rem
+        letter-spacing: 0.2px
 
     .icon-container
         font-size: 10rem
