--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -117,10 +117,12 @@ main
     color: #2b434e
 
 .about-container
-    height: 100vh
+    height: 90vh
     display: grid
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
-    align-items: center
+    align-items: start
+    justify-items: center
+    padding-top: 6rem
 
 @keyframes typing
     from   
