atualização espaçamento e linguagem

--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -10,7 +10,6 @@ body
     font-size: $base-font-size
 
 .header-container
-    font-family: 'Helvetica Neue', sans-serif
     background-color: transparent
     overflow-x: hidden
     width: 100%
@@ -40,8 +39,8 @@ body
             border-radius: 5px
 
 .nav-container
-    background-color: $main-color
-    margin-left: 2.2rem
+    margin-left: 2.8rem
+    padding-left: 2rem
     display: none
 
 .nav-container a
