--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -66,13 +66,13 @@ main
     text-align: center
 
 .descricao2
-    color: #253b46
+    color: #314c58
     font-size: 0.9rem
     font-family: 'Manrope', sans-serif
     font-weight: 200
     text-align: center
     white-space: wrap
-    letter-spacing: -0.1px
+    letter-spacing: -0.2px
 
 .icon-container
     height: 100%
@@ -93,6 +93,9 @@ main
     z-index: 1
     border: #253b46
     text-shadow: 10px 0 8px #253b46
+    &:hover
+        cursor: pointer
+        text-shadow: 10px 0 8px #16242b
 
 .sombra
     color: #253b46
@@ -309,7 +312,7 @@ main
         font-size: 3.7rem
 
     .descricao
-        font-size: 1.6rem
+        font-size: 1.4rem
 
     .descricao2
         font-size: 1.1rem
@@ -338,16 +341,16 @@ main
 
     .titulo
         margin-left: 2px
-        font-size: 2rem
+        font-size: 2.2rem
 
     .titulo2
-        font-size: 4.2rem
+        font-size: 4.5rem
 
     .descricao
-        font-size: 1.7rem
+        font-size: 1.6rem
 
     .descricao2
-        font-size: 1.2rem
+        font-size: 1.3rem
 
     .icon-container
         font-size: 10rem
@@ -371,20 +374,20 @@ main
 
     .titulo
         margin-left: 2px
-        font-size: 2.8rem
+        font-size: 3rem
 
     .titulo2
-        font-size: 5rem
+        font-size: 5.2rem
 
     .descricao
-        font-size: 1.8rem
+        font-size: 2rem
 
     .descricao2
-        font-size: 1.5rem
-        max-width: 600px
+        font-size: 1.7rem
+        max-width: 900px
 
     .icon-container
-        font-size: 10rem
+        font-size: 13rem
         width: auto
         margin-left: 0
 
