--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -119,7 +119,7 @@ main
     align-items: center
     font-family: 'Libre Bodoni', sans-serif
     font-size: 3rem
-    margin: 0.8rem
+    margin: 1rem
     color: #2b434e
 
 .about-container
@@ -194,7 +194,8 @@ main
     .projects-title 
         justify-content: start
         align-items: start
-        margin: 40px 0 0 80px
+        margin: 50px 0 2rem 80px
+        font-size: 4rem
 
     .about-container
         grid-template-columns: repeat(2, minmax(250px, 1fr))
@@ -235,7 +236,7 @@ main
     .projects-title 
         justify-content: start
         align-items: start
-        margin: 40px 0 0 60px
+        margin: 50px 0 2rem 60px
 
     .titulo
         margin-left: 2px
@@ -268,7 +269,7 @@ main
     .projects-title 
         justify-content: start
         align-items: start
-        margin: 40px 0 0 70px
+        margin: 40px 0 2rem 70px
 
     .titulo
         margin-left: 2px
@@ -288,7 +289,6 @@ main
         width: auto
         margin-left: 0
 
-
 @media screen and (min-width: $xl)
     main
         max-width: $xl
@@ -302,7 +302,7 @@ main
     .projects-title 
         justify-content: start
         align-items: start
-        margin: 40px 0 0 85px
+        margin: 40px 0 2rem 85px
 
     .titulo
         margin-left: 2px
@@ -337,7 +337,7 @@ main
     .projects-title 
         justify-content: start
         align-items: start
-        margin: 40px 0 0 90px
+        margin: 40px 0 2rem 90px
 
     .titulo
         margin-left: 2px
@@ -370,7 +370,7 @@ main
     .projects-title 
         justify-content: start
         align-items: start
-        margin: 40px 0 0 90px
+        margin: 40px 0 2rem 90px
 
     .titulo
         margin-left: 2px
