links + animação título

--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -4,6 +4,9 @@
     margin: 0
     padding: 0
 
+html 
+  scroll-behavior: smooth
+
 body
     height: 100vh
     box-sizing: border-box
@@ -48,6 +51,7 @@ body
     text-shadow: 1px 3px 8px rgba(0,0,0,0.1)
     font-family: 'Manrope', sans-serif
     margin: 0px 15px 0px 15px
+    text-decoration: none
 
     &:hover
         cursor: pointer
