section skills + nova borda

--- a/src/styles/Card.sass
+++ b/src/styles/Card.sass
@@ -5,8 +5,9 @@
     height: 400px
     background: #2b434e
     border-radius: 15px
-    box-shadow: 1px 5px 60px 0px rgba(0, 0, 0, 0.3)
+    box-shadow: 1px 5px 60px 0px rgba(0, 0, 0, 0.2)
     margin-bottom: 1.5rem
+    border: 0.1rem solid black
 
 
 .card .card-border-top 
@@ -15,6 +16,7 @@
     background: #e0f3fd
     margin: auto
     border-radius: 0px 0px 15px 15px
+    border: 0.1rem solid black
 
 .content
     display: flex
@@ -29,6 +31,7 @@
     display: block
     padding-top: 10px
     font-size: 1.3rem
+    text-shadow: 1px 3px 8px rgba(0,0,0,0.2)
 
 
 .content .job 
@@ -39,6 +42,7 @@
     text-align: center
     padding-top: 3px
     font-size: 12px
+    text-shadow: 1px 3px 8px rgba(0,0,0,0.2)
 
 
 .content .img 
@@ -54,6 +58,7 @@
   width: 100% // Ajusta a largura da imagem para ocupar 100% da largura da div
   height: auto // Mantém a proporção da imagem ajustando automaticamente a altura
   object-fit: cover // Mantém a proporção da imagem e a corta para cobrir a div
+  border: 0.1rem solid black
 
 .content button 
     padding: 8px 15px
@@ -66,6 +71,7 @@
     color: #252525
     font-weight: 600
     background: #e0f3fd
+    border: 0.1rem solid black
 
 
 .content button:hover 
