--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -5,7 +5,6 @@
 
 #root 
     background: $main-color
-    /*animation: gradient 4s infinite alternate*/
     background-size: 400%
     overflow: hidden
 
@@ -114,6 +113,13 @@ main
     margin-left: 0.8rem
     text-shadow: -8px 0 4px rgba(0, 0, 0, 0.5)
 
+.about-container
+    height: 85vh
+    display: grid
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
+    align-items: center
+    justify-items: center
+
 .cards-container
     background-color: transparent
     display: grid
@@ -128,15 +134,33 @@ main
     align-items: center
     font-family: 'Libre Bodoni', sans-serif
     font-size: 3rem
+    padding-top: 2rem
     margin: 1rem
     color: #2b434e
+    text-shadow: 1px 3px 8px rgba(0,0,0,0.2)
 
-.about-container
-    height: 90vh
+.skills-container
+    font-family: 'Ubuntu Mono', monospace
+    font-size: 2rem
+    margin-bottom: 2rem
     display: grid
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
+    grid-template-columns: repeat(2, minmax(250px, 1fr))
     align-items: center
     justify-items: center
+    gap: 1rem
+
+.skill
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-direction: column
+
+.percentage
+    border: solid black
+    border-radius: 10px
+    width: 10rem
+    height: 2rem
+    background-color: red
 
 @media screen and (max-width: 350px)
     main
@@ -225,6 +249,8 @@ main
         font-size: 6rem
         width: auto
         margin-left: 0
+    .skills-container
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
         
 @media screen and (min-width: $m)
     main
