--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -141,26 +141,102 @@ main
 
 .skills-container
     font-family: 'Ubuntu Mono', monospace
-    font-size: 2rem
+    font-size: 1.8rem
     margin-bottom: 2rem
     display: grid
     grid-template-columns: repeat(2, minmax(250px, 1fr))
     align-items: center
-    justify-items: center
     gap: 1rem
 
 .skill
+    padding-left: 2rem
     display: flex
-    align-items: center
     justify-content: center
     flex-direction: column
 
-.percentage
+.skill h4 
+    margin-bottom: 0.2rem
+    
+.percentage-container
     border: solid black
     border-radius: 10px
     width: 10rem
     height: 2rem
-    background-color: red
+    background-color: #e0f3fd
+
+.percentage
+    margin: 0
+    border-radius: 7px 0 0 7px
+    height: 100%
+
+.react
+    background-color: #0d3c56
+    width: 95%
+
+.native 
+    background-color: #2e0d56
+    width: 60%
+
+.html 
+    background-color: #236782
+    width: 90%
+
+.css 
+    background-color: #d2472e
+    width: 85%
+
+.sass 
+    background-color: #c13d55
+    width: 80%
+
+.js 
+    background-color: #f2c840
+    width: 75%
+
+.ts 
+    background-color: #13aeb0
+    width: 50%
+
+.java 
+    background-color: #bd0303
+    width: 90%
+
+.python 
+    background-color: #41809a
+    width: 80%
+
+.c 
+    background-color: #4874d3
+    width: 50%
+
+.node 
+    background-color: #17803c
+    width: 45%
+
+.firebase 
+    background-color: #d1c82c
+    width: 40%
+
+.git 
+    background-color: #141414
+    width: 80%
+
+.data 
+    background-color: #ec6fb2
+    width: 80%
+
+.programing 
+    background-color: #c7853e
+    width: 90%
+
+.english 
+    background-color: #1227af
+    width: 85%
+
+.excel 
+    background-color: #61ac2f
+    width: 50%
+
 
 @media screen and (max-width: 350px)
     main
